--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/UserExistsHelper.php"
+            "app/Helpers/UserExistsHelper.php",
+            "app/Helpers/ZoomHelper.php"
         ]
     },
     "autoload-dev": {
